# collatz

./: .gitignore  .gitmodules  Makefile.am  configure.ac
src/: Makefile.am  check.cpp  collatz.cpp  collatz.hpp
tests/: .gitignore  Makefile.am  benchmark.cpp  test.cpp
